--- a/recovery/root/init.recovery.samsung.rc
+++ b/recovery/root/init.recovery.samsung.rc
@@ -3,3 +3,6 @@ on init
     rm /efs
     mkdir /efs
     mkdir /sec_efs
+
+ #to cut charging battery path
+    write /sys/class/power_supply/battery/siop_level 0
